# zaberov_dz_13_1_3

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
src/: linked_list.py  queue.py  stack.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
tests/htmlcov/: d_49b7bb1461219e08___init___py.html  d_49b7bb1461219e08_linked_list_py.html  d_49b7bb1461219e08_queue_py.html  d_49b7bb1461219e08_stack_py.html  index.html  status.json
